Added css and all other details

--- a/contact.html
+++ b/contact.html
@@ -13,15 +13,18 @@
     <title>Contact</title>
   </head>
   <body>
-    <h1>Contact</h1>
-    <p>
-      To contact croissant.com, please email us at
-      <a href="mailto:hello@croissant.com" class="email-link"
-        >hello@croissant.com</a
-      >
-      for more info
-    </p>
-    <a href="/photo.html">Photos</a>
-    <a href="/">Homepage</a>
+    <div class="container">
+      <h1>Contact</h1>
+      <p>
+        To contact croissant.com, please email us at
+        <a href="mailto:hello@croissant.com" class="email-link"
+          >hello@croissant.com</a
+        >
+      </p>
+      <footer class="nav-links">
+        <a class="nav-link" href="/">Homepage</a>
+        <a class="nav-link" href="/photo.html">Photos</a>
+      </footer>
+    </div>
   </body>
 </html>
