--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
     <title>Croisant</title>
   </head>
   <body>
-    <h1>Croissant</h1>
-    <p>
-      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-      named for its historical crescent shape. Croissants and other viennoiserie
-      are made of a layered yeast-leavened dough
-    </p>
-    <a href="/photo.html">Photos</a>
-    <a href="/contact.html">Contact</a>
+    <div class="container">
+      <h1>Croissant</h1>
+      <p>
+        A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
+        named for its historical crescent shape. Croissants and other
+        viennoiserie are made of a layered yeast-leavened dough
+      </p>
+      <footer class="nav-links">
+        <a class="nav-link" href="/photo.html">Photos</a>
+        <a class="nav-link" href="/contact.html">Contact</a>
+      </footer>
+    </div>
   </body>
 </html>
