--- a/photo.html
+++ b/photo.html
@@ -13,8 +13,15 @@
     <title>Photo</title>
   </head>
   <body>
-    <h1>Photo</h1>
-    <a href="/">Homepage</a>
-    <a href="/contact.html">Contact</a>
+    <div class="container">
+      <h1>Photo</h1>
+      <img src="images/croissant.jpg" alt="coffee-croissant" />
+      <div>
+        <footer class="nav-links">
+          <a class="nav-link" href="/">Homepage</a>
+          <a class="nav-link" href="/contact.html">Contact</a>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
