Fixed photos to photo

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       </p>
       <footer class="nav-links">
         <a class="nav-link" href="/">Homepage</a>
-        <a class="nav-link" href="/photo.html">Photos</a>
+        <a class="nav-link" href="/photo.html">Photo</a>
       </footer>
     </div>
   </body>
