Fixed photo on homepage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         viennoiserie are made of a layered yeast-leavened dough
       </p>
       <footer class="nav-links">
-        <a class="nav-link" href="/photo.html">Photos</a>
+        <a class="nav-link" href="/photo.html">Photo</a>
         <a class="nav-link" href="/contact.html">Contact</a>
       </footer>
     </div>
