--- a/index.html
+++ b/index.html
@@ -3,27 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="/style/style.css" class="css" />
     <title>Croisant</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Croissant</h1>
-      <p>
-        A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-        named for its historical crescent shape. Croissants and other
-        viennoiserie are made of a layered yeast-leavened dough
-      </p>
-      <footer class="nav-links">
-        <a class="nav-link" href="/photo.html">Photo</a>
-        <a class="nav-link" href="/contact.html">Contact</a>
-      </footer>
-    </div>
+    <h1>Croissant</h1>
+    <p>
+      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
+      named for its historical crescent shape. Croissants and other viennoiserie
+      are made of a layered yeast-leavened dough
+    </p>
+    <footer class="nav-links">
+      <a class="nav-link" href="/photo.html">Photo</a>
+      <a class="nav-link" href="/contact.html">Contact</a>
+    </footer>
   </body>
 </html>
