Added SEO and changed nav link colour for better contrast

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Learn more about the beauty of the croissant!"
+    />
     <link rel="stylesheet" href="/style/style.css" class="css" />
-    <title>Contact</title>
+    <title>Contact | Croissant</title>
   </head>
   <body>
     <h1>Contact</h1>
@@ -15,8 +19,8 @@
       >
     </p>
     <footer class="nav-links">
-      <a class="nav-link" href="/">Homepage</a>
-      <a class="nav-link" href="/photo.html">Photo</a>
+      <a class="nav-link" href="/" title="Go to homepage">Homepage</a>
+      <a class="nav-link" href="/photo.html" title="Go to photo page">Photo</a>
     </footer>
   </body>
 </html>
