--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Learn more about the beauty of the croissant!"
+    />
     <link rel="stylesheet" href="/style/style.css" class="css" />
-    <title>Croisant</title>
+    <title>Homepage | Croissant</title>
   </head>
   <body>
     <h1>Croissant</h1>
@@ -14,8 +18,10 @@
       are made of a layered yeast-leavened dough
     </p>
     <footer class="nav-links">
-      <a class="nav-link" href="/photo.html">Photo</a>
-      <a class="nav-link" href="/contact.html">Contact</a>
+      <a class="nav-link" href="/photo.html" title="Go to photo page">Photo</a>
+      <a class="nav-link" href="/contact.html" title="Go to contact page"
+        >Contact</a
+      >
     </footer>
   </body>
 </html>
