--- a/photo.html
+++ b/photo.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Learn more about the beauty of the croissant!"
+    />
     <link rel="stylesheet" href="/style/style.css" class="css" />
-    <title>Photo</title>
+    <title>Photo | Croissant</title>
   </head>
   <body>
     <h1>Photo</h1>
-    <img src="images/croissant.jpg" alt="coffee-croissant" />
+    <img src="images/croissant.jpg" alt="coffee and croissant" />
     <footer class="nav-links">
-      <a class="nav-link" href="/">Homepage</a>
-      <a class="nav-link" href="/contact.html">Contact</a>
+      <a class="nav-link" href="/" title="Go to homepage">Homepage</a>
+      <a class="nav-link" href="/contact.html" title="Go to contact page"
+        >Contact</a
+      >
     </footer>
   </body>
 </html>
