Added image title

--- a/photo.html
+++ b/photo.html
@@ -12,7 +12,11 @@
   </head>
   <body>
     <h1>Photo</h1>
-    <img src="images/croissant.jpg" alt="coffee and croissant" />
+    <img
+      src="images/croissant.jpg"
+      alt="coffee and croissant"
+      title="coffee and croissant photo"
+    />
     <footer class="nav-links">
       <a class="nav-link" href="/" title="Go to homepage">Homepage</a>
       <a class="nav-link" href="/contact.html" title="Go to contact page"
